<resources>
    <string name="app_name">NutriSight</string>
    <string name="vector_illustration_of_a_login_screen">vector illustration of a login screen</string>
    <string name="vector_illustration_of_a_register_screen">vector illustration of a register screen</string>
    <string name="login_to_your_account">Login to your account!</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="fill_in_your_details">Fill in your details</string>
    <string name="email">Email</string>
    <string name="register_now">Register Now!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="get_started">Let\'s Get Started ➔</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="vector_illustration_of_onboarding">vector illustration of onBoarding</string>
    <string name="first_desc">Discover the nutritional quality of your food with ease. Let us guide you towards healthier choices.</string>
    <string name="second_desc">Understand the nutritional content of your favorite foods. Get insights on calories, sugar, and more.</string>
    <string name="third_desc">Our advanced machine learning algorithms evaluate and grade the nutritional value of foods, helping you make informed decisions.</string>
    <string name="fourth_desc">Enjoy a seamless user experience with our easy-to-navigate interface. Nutrition analysis has never been this simple.</string>
    <string name="first_title">Welcome to NutriSight!</string>
    <string name="second_title">Detailed Food Nutrition Analysis</string>
    <string name="third_title">Smart Nutrition Grading</string>
    <string name="fourth_title">Simple and Intuitive Interface</string>
    <string name="saved_food">Saved Food</string>
    <string name="image_of_the_saved_food">Image of the saved food</string>
    <string name="cal">kCal</string>
    <string name="your_food_grade_average">Your Food Grade Average</string>
    <string name="total_calories">Total calories :</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="food_icon">food icon</string>
    <string name="settings_button">settings button</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="logo_of_translation">logo of translation</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logo_of_arrow">logo of arrow</string>
    <string name="logout">Log Out</string>
    <string name="start_scan_your_food_now">Start scan your food now!</string>
    <string name="welcome">"Welcome &#128075;, "</string>
    <string name="your_average">Your Average</string>
    <string name="articles">Articles</string>
    <string name="recommended_food">Recommended Food</string>
    <string name="scan">Scan</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="pick_a_method">Pick a Method</string>
    <string name="logo_of_cancel">Cancel button</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="article_image">image of the article</string>
    <string name="product">Product</string>
    <string name="ok">OK</string>
    <string name="registration_successful">Your account has successfully registered.</string>
    <string name="registration_failed">Registration Failed, Please try again</string>
    <string name="try_again">Try again</string>
    <string name="confirm">Confirm</string>
    <string name="indonesia">Indonesian</string>
    <string name="english">English</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_you_want_to_logout_from_this_account">Are you sure you want to logout from this account?</string>
    <string name="cancel">Cancel</string>
    <string name="Japanese">Japanese</string>
    <string name="nutritional_information">Nutritional Information</string>
    <string name="serving_size">Serving Size</string>
    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="sugar">Sugar</string>
    <string name="natrium">Natrium</string>
    <string name="salt">Salt</string>
    <string name="save">Save</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="empty_field">Please fill in all fields</string>
    <string name="login_successful">Login Successful!</string>
    <string name="login_failed_please_try_again">Login Failed. Please Try Again</string>
    <string name="loading_please_wait">Loading. Please Wait…</string>
    <string name="password_not_match">Your password and confirm password must be the same</string>
    <string name="warning_text">For better classification and detection, ensure accurate input data, use high-quality images, and clear background.</string>
    <string name="must_fill">You must fill this field</string>
    <string name="warning_for_user">Warning for user</string>
    <string name="failed_to_upload_image_please_try_again">Failed to upload image, please try again</string>
    <string name="main_information_about_nutrition">Main information about nutrition</string>
    <string name="desc_sugar">The American Heart Association (AHA) recommends that children and teens (ages 2–18) consume no more than 25 grams (6 teaspoons) of added sugars per day. For adults, the AHA advises men to limit their intake of added sugars to no more than 36 grams (9 teaspoons) per day and women to no more than 25 grams (6 teaspoons) per day.</string>
    <string name="desc_salt">The recommended sodium intake varies by age and sex. For children aged 2–13 years, the intake should generally range from 1,200 to 2,300 milligrams (mg) per day. Teens aged 14–18 years should consume no more than 2,300 mg per day. For adults, the American Heart Association (AHA) recommends no more than 2,300 mg of sodium per day, ideally aiming for less than 1,500 mg for most adults.</string>
    <string name="desc_fat">For children aged 2–3 years, 30–35% of total daily calories should come from fat. For children and teens aged 4–18 years, 25–35% of total daily calories should come from fat. For adults, the Dietary Guidelines for Americans suggest that 20–35% of your daily calories come from fat. Within these limits, saturated fat should be less than 10% of total daily calories, and trans fats should be avoided as much as possible, aiming for zero consumption.</string>
    <string name="risk_sugar">Health Risks : Excessive sugar consumption is linked to obesity, type 2 diabetes, heart disease, and dental problems.</string>
    <string name="risk_salt">Health Risks : High sodium intake is associated with increased blood pressure, which can lead to heart disease, stroke, and kidney damage.</string>
    <string name="risk_fat">Health Risks : Excessive intake of unhealthy fats, can lead to obesity and increase the risk of type 2 diabetes, hypertension, and certain cancers. It also contributes to fatty liver disease, potentially causing liver inflammation and damage.</string>
    <string name="error_fetch_article">Error fetching article data… Please try again later</string>
    <string name="about_nutrition">About Nutrition</string>
    <string name="about_grading">About Grading</string>
    <string name="a" translatable="false">A</string>
    <string name="b" translatable="false">B</string>
    <string name="c" translatable="false">C</string>
    <string name="d" translatable="false">D</string>
    <string name="e" translatable="false">E</string>
    <string name="explanation">Explanation</string>
    <string name="grade_a_dark_green">Grade A (Dark Green)</string>
    <string name="desc_grade_A">Description: This represents the highest grade, indicating excellent quality or performance. Products with this grade are considered the best in terms of their nutritional value or other evaluated criteria.</string>
    <string name="grade_b_light_green">Grade B (Light Green)</string>
    <string name="desc_grade_b">Description: This grade signifies good quality. Products with this grade are above average and are recommended for their beneficial properties, though not as optimal as Grade A.</string>
    <string name="grade_c_yellow">Grade C (Yellow)</string>
    <string name="desc_grade_c">Description: This grade is assigned to products of average quality. While these products are generally acceptable, they may not have the superior qualities of higher grades.</string>
    <string name="grade_d_orange">Grade D (Orange)</string>
    <string name="desc_grade_d">Description: This grade indicates below-average quality. Products with this grade may have some drawbacks and are less recommended compared to higher grades.</string>
    <string name="grade_e_red">Grade E (Red)</string>
    <string name="desc_grade_e">Description: This is the lowest grade, representing poor quality. Products with this grade are not recommended as they may have significant drawbacks or lower nutritional value.</string>
    <string name="my_account">My Account</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="set_new_password">Set new password</string>
    <string name="warning_delete">Deleting account will permanently remove their account and all associated data. This action cannot be undone.</string>
    <string name="confirm_delete">Are you sure you want to delete this account?</string>
    <string name="failed_update">Failed to update user</string>
    <string name="edit_success">Your account has successfully edited</string>
    <string name="edit_failed">Edit failed, please try again</string>
    <string name="same_field">Update required: Please modify your information to proceed.</string>
    <string name="text_profile">Profile</string>
    <string name="about">About</string>
    <string name="introduction_app">NutriSight is the culmination of our journey in the Bangkit program, where innovation meets nutritional awareness. NutriSight Android app is open source, making it clear that it\'s accessible for everyone to use and improve together. Our app empowers you to make informed dietary choices effortlessly by scanning food and drink products and grading them based on their nutrition facts. Whether you\'re tracking calories or information of food products.</string>
    <string name="text_intro_dev">NutriSight was made possible by the dedication and expertise of our talented capstone group:</string>
    <string name="about_us">About Us!</string>
    <string name="list_group">\u25CF Yoga Ramadan (ML)\n\u25CF Muhammad Ardiansyah (ML)\n\u25CF Guntur Adi Wardana (ML)\n\u25CF Taffan Muhammad Rizqi (MD)\n\u25CF Alif Nur Samudra (MD)\n\u25CF Tsalisa Syifa Afia (CC)\n\u25CF Cakra Kusuma Erlangga Ramdani (CC)</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="invalid_password" translatable="false">Password must be at least 8 characters</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="stay_tune_for_more_updates">Stay tune for more updates!</string>
    <string name="total_calories_in_percent">Total Calories In Percent</string>
    <string name="no_data_available">No Data Availaible</string>
    <string name="other">Other</string>
    <string name="energy_from_fat">Energy From Fat</string>

</resources>