<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="16dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/background_color"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/about_nutrition"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/black_white"
                    />

                <ImageButton
                    android:id="@+id/info_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center|end"
                    android:contentDescription="@string/main_information_about_nutrition"
                    android:foregroundGravity="center"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/rounded_cancel_24"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="4dp"
                android:background="@color/black_white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugar"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black_white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_sugar"
                android:layout_marginTop="8dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:textColor="@color/black_white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/risk_sugar"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:textColor="@color/black_white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salt"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black_white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_salt"
                android:layout_marginTop="8dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:textColor="@color/black_white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/risk_salt"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:textColor="@color/black_white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black_white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_fat"
                android:layout_marginTop="8dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:textColor="@color/black_white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/risk_fat"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:textColor="@color/black_white"/>




        </LinearLayout>


    </androidx.cardview.widget.CardView>





</ScrollView>