<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/background_color"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radio_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/radio_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english" />

                <RadioButton
                    android:id="@+id/radio_indonesia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/indonesia" />

                <RadioButton
                    android:id="@+id/radio_japanese"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Japanese" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textAllCaps="true"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:backgroundTint="@color/main_green_dark"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/radio_language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>